# tauri-nspanel

./: package-lock.json
examples/vanilla/: package-lock.json  package.json
examples/vanilla/public/: index.html  main.js
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: fake_window.rs  main.rs  main.rs.backup.rs
