[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["You"]
repository = ""
edition = "2021"
rust-version = "1.59"

[dependencies]
cocoa = "0.24"
objc = "0.2"
core-graphics = "0.22"
core-foundation = "0.9"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "1", features = [ "macos-private-api"] }
tauri-nspanel = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
